fix: z-index breaking links or lottie

--- a/src/assets/css/xcash-preview.webflow.css
+++ b/src/assets/css/xcash-preview.webflow.css
@@ -181,7 +181,7 @@ a {
 }
 
 .section.half-height.black {
-  z-index: -2;
+  /* z-index: -2; */
   background-color: #1f1f1f;
 }
 
